src/components/navigation/NavigationMobile.module.css
@media screen and (max-width: 1023px) {
  .menu {
    position: fixed;
    top: 0;
    left: 0;
    padding: 0 20px;
    width: 100vw;
    height: 100vh;
    background: #fff;
    z-index: 11;
    /* добавил цвет заднего фона для корректного отображения на главной странице (Максим) */
  }

  .nav {
    width: 100%;
    min-height: 330px;
    height: 40vh;
  }

  .nav__list {
    margin-top: 73.1px;
    text-align: center;
  }

  .nav__item {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    font-family: "JetBrains Mono ExtraBold", monospace;
    font-size: 20px;
    letter-spacing: 1px;
    line-height: 23px;
    text-transform: uppercase;
    padding: 10px;
    color: rgba(31, 31, 31, 0.3);
    -webkit-transition: all 0.5s cubic-bezier(0.6, 0, 0.5, 1);
    -o-transition: all 0.5s cubic-bezier(0.6, 0, 0.5, 1);
    transition: all 0.5s cubic-bezier(0.6, 0, 0.5, 1);
  }

  .nav__item:first-child {
    padding-top: 50px;
  }

  .nav__item:hover {
    color: #fff;
  }

  .social {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -ms-flex-pack: distribute;
    justify-content: space-around;
    margin-bottom: 50px;
  }

  .item {
    font-size: 10px;
    text-transform: uppercase;
    list-style-type: none;
  }

  .link__social,
  .nav__item {
    cursor: url("/public/img/header/cursor_active.svg") 10 10, pointer;
  }

  .contacts__copyright {
    margin-top: 40px;
    font-size: 10px;
    line-height: 13px;
    text-transform: uppercase;
    float: right;
  }
}

